1 st fix of index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Hub</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recipe Hub | Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Recipe Hub</h1>
-    <p>Share and explore delicious recipes!</p>
+  <header>
+    <h1> Recipe Hub</h1>
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="appetizers.html">Appetizers</a>
+      <a href="desserts.html">Desserts</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=1200" alt="Delicious food">
+    <div class="hero-text">
+      <h2>Welcome to Recipe Hub</h2>
+      <p>Discover, share, and enjoy mouth-watering recipes from around the world.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Recipe Hub | Created by <strong>Ushan Perera</strong></p>
+  </footer>
 </body>
 </html>
